# CompilerGPT

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  VERSION  defaults.json  matmul.json  query.json  simple.json
evaluation/: Readme.md
figures/: optai.drawio
include/: llmtools.hpp  tool_version.hpp
scripts/claude/: exec-claude.sh
scripts/gpt4/: exec-gpt-4o.sh  exec-openai.sh  execquery-bsd.sh  execquery.sh  openaiquery.py  query-gpt-4-turbo.py
scripts/ollama/: exec-ollama.sh
scripts/openrouter/: exec-openrouter.sh
scripts/other/: modelquery.py
src/: code-assist.cc  compgpt.cc  llmtools.cc  llmtools.h  logfilter.cc  optai.cc  prettyjson.cc  test-llmtools.cc
tests/humaneval/: 0_declaration.cc  0_test.cc  100_declaration.cc  100_test.cc  101_declaration.cc  101_test.cc  102_declaration.cc  102_test.cc  103_declaration.cc  103_test.cc  104_declaration.cc  104_test.cc  105_declaration.cc  105_test.cc  106_declaration.cc  106_test.cc  107_declaration.cc  107_test.cc  108_declaration.cc  108_test.cc  109_declaration.cc  109_test.cc  10_declaration.cc  10_test.cc  110_declaration.cc  110_test.cc  111_declaration.cc  111_test.cc  112_declaration.cc  112_test.cc  113_declaration.cc  113_test.cc  114_declaration.cc  114_test.cc  115_declaration.cc  115_test.cc  116_declaration.cc  116_test.cc  117_declaration.cc  117_test.cc  (+290 more)
tests/llmtools-example/: README.md  code_optimizer.cc  q.json
tests/matmul/: clean.sh  matmul.json  matmul_unguided.json  perftest.sh
tests/matmul-2/: Readme  clang-claude-default.json  clang-openai-default.json  claude_guided.json  claude_unguided.json  eval.sh  gcc-claude-default.json  gcc-openai-default.json  gpt4o_guided.json  gpt4o_unguided.json  matmul-claude.json  matmul-claude_unguided.json  matmul.json  matmul_unguided.json  perf.cc  run.sh  save-experiment.sh  setup-gcc-claude.json  simplematrix.cc  tests.ods
tests/matmul-2/tests.1/: claude_guided.csv  claude_success_guided.csv  claude_success_unguided.csv  claude_unguided.csv  got4o_guided.csv  got4o_unguided.csv  gpt4o_success_guided.csv  gpt4o_success_unguided.csv
tests/matmul-2/tests.1/claude.guided.1/: log.txt  query.json  query.pretty.json  simplematrix1.cc  simplematrix2.cc  simplematrix3.cc  simplematrix4.cc  simplematrix5.cc  simplematrix6.cc  simplematrix7.cc  simplematrix8.cc  simplematrix9.cc
tests/matmul-2/tests.1/claude.guided.2/: log.txt  query.json  simplematrix1.cc  simplematrix2.cc  simplematrix3.cc  simplematrix4.cc  simplematrix5.cc  simplematrix6.cc  simplematrix7.cc  simplematrix8.cc  simplematrix9.cc
tests/matmul-2/tests.1/claude.guided.3/: log.txt  query.json  simplematrix1.cc  simplematrix2.cc  simplematrix3.cc  simplematrix4.cc  simplematrix5.cc  simplematrix6.cc  simplematrix7.cc  simplematrix8.cc  simplematrix9.cc
tests/matmul-2/tests.1/claude.guided.4/: log.txt  query.json  simplematrix1.cc  simplematrix2.cc  simplematrix3.cc  simplematrix4.cc  simplematrix5.cc  simplematrix6.cc  simplematrix7.cc
tests/matmul-2/tests.1/claude.guided.5/: log.txt  query.json  simplematrix1.cc  simplematrix2.cc  simplematrix3.cc  simplematrix4.cc  simplematrix5.cc  simplematrix6.cc  simplematrix7.cc  simplematrix8.cc  simplematrix9.cc
tests/matmul-2/tests.1/claude.guided.6/: log.txt  query.json  simplematrix1.cc  simplematrix2.cc  simplematrix3.cc  simplematrix4.cc  simplematrix5.cc  simplematrix6.cc  simplematrix7.cc  simplematrix8.cc  simplematrix9.cc
tests/matmul-2/tests.1/claude.unguided.1/: log.txt  query.json  simplematrix1.cc  simplematrix2.cc  simplematrix3.cc  simplematrix4.cc  simplematrix5.cc  simplematrix6.cc  simplematrix7.cc  simplematrix8.cc  simplematrix9.cc
tests/matmul-2/tests.1/claude.unguided.2/: log.txt  query.json  simplematrix1.cc  simplematrix2.cc  simplematrix3.cc  simplematrix4.cc  simplematrix5.cc  simplematrix6.cc  simplematrix7.cc  simplematrix8.cc  simplematrix9.cc
tests/matmul-2/tests.1/claude.unguided.3/: log.txt  query.json  simplematrix1.cc  simplematrix2.cc  (+7 more)
tests/matmul-3/: clean.sh  gcc-openai-guided.json
tests/matmul/guided-1/: log.txt  query.json  simplematrix1.cc  simplematrix10.cc  simplematrix2.cc  simplematrix3.cc  simplematrix4.cc  simplematrix5.cc  simplematrix6.cc  simplematrix7.cc  simplematrix8.cc  simplematrix9.cc
tests/matmul/unguided-1/: log.txt  query.json  simplematrix1.cc  simplematrix10.cc  simplematrix2.cc  simplematrix3.cc  simplematrix4.cc  simplematrix5.cc  simplematrix6.cc  simplematrix7.cc  simplematrix8.cc  simplematrix9.cc
tests/nas-benchmarks/BT/: claude_guided.json  clean.sh  guided.json  mini.c  mini1.c  mini2.c  npbparams.h  ollama-439.json  out.txt  perftest.sh  q.json  run.sh  save-experiment.sh  system.txt  tests.ods
tests/omp-prefixsum/: Readme.md  clean.sh  eval.sh  gcc-claude-guided.json  gcc-openai-guided.json  save-experiment.sh
tests/simple/: kernel1.c  simple.json  test.sh
tests/smith-waterman/: claude_guided.json  claude_unguided.json  clean.sh  sample-setup.json  save-experiment.sh  sw-gpt.json  sw-gpt_unguided.json  tests.ods
tests/smith-waterman/tests.1/: claude_guided.csv  claude_unguided.csv  gpt4o_guided.csv  gpt4o_guided.json  gpt4o_unguided.csv  gpt4o_unguided.json
tests/translation-dafny-ada/: clean.sh  compiletest.sh  dfy-ada.json
(+670 files in other folders)
